# lifestyle

./: .gitignore  LICENSE  README.md
backend/: .env.example  .vercelignore  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  error_handlers.py
backend/app/api/routers/: admin.py  auth.py  checklist.py  coach.py  coach_workouts.py  exercises.py  me.py  meals.py  measurements.py  workouts.py
backend/app/core/: config.py  cors.py  cursor.py  security.py  timezone.py  tokens.py
backend/app/db/: session.py
backend/app/repositories/: audit_logs.py  checklist.py  coach_clients.py  exercises.py  meals.py  measurements.py  refresh_tokens.py  users.py  workout_templates.py  workouts.py
backend/app/schemas/: admin.py  auth.py  checklist.py  coach.py  coach_workouts.py  common.py  exercises.py  meals.py  measurements.py  workouts.py
backend/app/scripts/: create_initial_admin.py  seed_reference_data.py
backend/app/services/: admin_service.py  auth_service.py  checklist_service.py  coach_service.py  exercise_service.py  meal_service.py  measurement_service.py  task_recurrence.py  text_utils.py  unit_conversion.py  user_service.py  workout_service.py  workout_template_service.py
backend/fitness_coaching_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_checklist.py  test_coach_tasks.py  test_exercises.py  test_meals.py  test_measurements.py  test_permissions.py  test_task_recurrence.py  test_workout_templates.py  test_workouts.py
frontend/: index.html  (+4 more)
(+148 files in other folders)
