[project]
name = "fitness-coaching-api"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.117.1",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "SQLAlchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "PyJWT[crypto]>=2.8.0",
  "pwdlib[argon2]>=0.2.0",
  "python-multipart>=0.0.9",
  "orjson>=3.10.0",
  "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.vercel]
entrypoint = "app.main:app"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
